[package]
name = "poirot-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-dyn-abi.workspace = true
reth-rpc-types.workspace = true
reth-primitives.workspace = true
tracing.workspace = true
rayon.workspace = true
malachite.workspace = true
serde.workspace = true
phf = { version = "0.11.1", default-features = false }
clickhouse = { git = "https://github.com/SorellaLabs/clickhouse.rs" }


[build-dependencies]
strum = { version = "0.25.0", features = ["derive"] }
tokio.workspace = true
hyper.workspace = true
hyper-tls = "0.5.0"
serde.workspace = true
serde_json.workspace = true
alloy-etherscan.workspace = true
alloy-json-abi.workspace = true
ethers-core.workspace = true
phf = { version = "0.11.1", default-features = false }
phf_codegen = "0.11.1"
dotenv = "0.15.0"
clickhouse = { git = "https://github.com/SorellaLabs/clickhouse.rs" }

[features]
server = []
