[package]
name = "reth-tracing-ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Reth
reth-node-ethereum.workspace = true
async-trait.workspace = true
reth-tasks.workspace = true
reth-rpc.workspace = true
reth-rpc-types.workspace = true
reth-rpc-api.workspace = true
reth-provider.workspace = true
reth-transaction-pool.workspace = true
reth-network-api.workspace = true
reth-primitives.workspace = true
reth-db.workspace = true
reth-blockchain-tree.workspace = true
reth-beacon-consensus.workspace = true
reth-revm.workspace = true
reth-interfaces.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
futures.workspace = true
brontes-types.workspace = true
tracing.workspace = true

num_cpus.workspace = true
alloy-rpc-trace-types = { git = "https://github.com/alloy-rs/alloy", rev = "52bf712" }
revm = { git = "https://github.com/bluealloy/revm", branch = "main", features = [
  "std",
  "secp256k1",
], default-features = false }
revm-primitives = { git = "https://github.com/bluealloy/revm", branch = "main", features = [
  "std",
], default-features = false }
revm-inspectors = { git = "https://github.com/paradigmxyz/evm-inspectors", rev = "ac63f06" }
bitflags = "2.4"

# error
eyre = "0.6.8"

# Async
tokio = { version = "1.28.2", features = ["full"] }

serde.workspace = true
serde_json.workspace = true
jsonrpsee = "0.22.1"
[dev-dependencies]
brontes-core = { workspace = true, features = ["tests"] }
reth-tracing-ext = { workspace = true, features = ["tests"] }
brontes-macros.workspace = true
dotenv.workspace = true

[features]
tests = []
local-reth = ["brontes-types/local-reth", "brontes-core/local-reth"]
local-clickhouse = [
  "brontes-core/local-clickhouse",
  "brontes-types/local-clickhouse",
]
