[package]
name = "reth-tracing-ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Reth
reth-node-ethereum.workspace = true
reth-node-types.workspace = true
async-trait.workspace = true
reth-tasks.workspace = true
reth-rpc.workspace = true
reth-rpc-api.workspace = true
reth-chainspec.workspace = true
reth-provider.workspace = true
reth-transaction-pool.workspace = true
reth-network-api.workspace = true
reth-primitives.workspace = true
reth-db.workspace = true
reth-revm.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-rpc-types-trace.workspace = true
alloy-rpc-types.workspace = true
futures.workspace = true
reth-rpc-eth-types.workspace = true
reth-rpc-eth-api.workspace = true
reth-rpc-server-types.workspace = true
brontes-types.workspace = true
revm-inspector.workspace = true
alloy-evm.workspace = true
# revm-interpreter.workspace = true
tracing.workspace = true

num_cpus.workspace = true
revm-primitives.workspace = true
revm-inspectors.workspace = true
rayon.workspace = true
bitflags = "2.4"

revm.workspace = true
# error
eyre = "0.6.8"

serde.workspace = true
serde_json.workspace = true

# Async
tokio = { version = "1.28.2", features = ["full"] }

[dev-dependencies]
brontes-core = { workspace = true, features = ["tests"] }
reth-tracing-ext = { workspace = true, features = ["tests"] }
brontes-macros.workspace = true
dotenv.workspace = true

[features]
tests = []
local-reth = ["brontes-types/local-reth", "brontes-core/local-reth"]
local-clickhouse = [
  "brontes-core/local-clickhouse",
  "brontes-types/local-clickhouse",
]
