[package]
name = "poirot-tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
console-subscriber = "0.1.5"
metrics-tracing-context = "0.14.0"
