[package]
name = "brontes-database"
version = "0.1.0"
edition = "2021"

[dependencies]

# brontes
brontes-types.workspace = true
brontes-pricing.workspace = true
brontes-metrics.workspace = true
brontes-macros.workspace = true
brontes-libmdbx = { workspace = true, features = ["read-tx-timeouts"] }
moka = { version = "0.12.7", features = ["sync"] }

regex = "1"

reth-tracing-ext.workspace = true
# alloy
alloy-primitives = { workspace = true, features = [
  "rand",
  "rlp",
  "arbitrary",
  "serde",
] }
alloy-rlp = { workspace = true, features = ["arrayvec"] }
alloy-json-abi = { workspace = true, features = ["serde_json"] }


# reth
reth-primitives.workspace = true
reth-interfaces.workspace = true
reth-libmdbx = { workspace = true, features = [
  "return-borrowed",
  "read-tx-timeouts",
] }
reth-mdbx-sys = { git = "https://github.com/paradigmxyz/reth", rev = "ac29b4b" }
reth-db.workspace = true
reth-rpc.workspace = true
reth-rpc-types.workspace = true

# filesystem
fs2.workspace = true
fs_extra.workspace = true
filesize.workspace = true
tar.workspace = true
flate2.workspace = true

# libmdbx deps
parity-scale-codec = { version = "3.2.1", features = ["derive", "bytes"] }
reth-codecs.workspace = true
reth-codecs-derive.workspace = true
proptest = "1.4"
proptest-derive = "0.4"
arbitrary = "1.3"
rand = "0.8.5"
modular-bitfield = "0.11.2"
bytes = "1.5"
zstd = "0.13"
chrono = "0.4.35"
dashmap = "5.5.3"
polars.workspace = true
arrow.workspace = true
parquet = { workspace = true, features = ["async"] }

ahash = "0.8.11"
# numbers
malachite = { workspace = true, features = ["naturals_and_integers"] }

# sorella-db
db-interfaces = { git = "https://github.com/SorellaLabs/db-interfaces", optional = true, features = [
  "test-utils",
] }
clickhouse = { workspace = true, features = ["tls"] }

# serde
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_repr.workspace = true
serde_with = { workspace = true, features = ["macros"] }

# error handling
thiserror.workspace = true


# async
futures.workspace = true
tokio.workspace = true
tokio-scoped = "0.2.0"
async-rate-limiter = { workspace = true, optional = true }


# web
hyper-tls.workspace = true
hyper.workspace = true


# tracing
tracing.workspace = true

# misc
backon.workspace = true
eyre.workspace = true
parking_lot.workspace = true
dotenv.workspace = true
bincode = "2.0.0-rc.3"
redefined.workspace = true
derive_more = "0.99.17"
paste = "1.0.14"
petgraph = "0.6.4"
itertools = "0.12.0"
rayon.workspace = true
strum = "0.25"
strum_macros = "0.25"
async-trait = "0.1.73"
reqwest = { workspace = true, features = ["stream"] }
toml = "0.8.9"
indicatif.workspace = true
page_size = "0.6.0"
schnellru = "0.2.2"

# benches
criterion = "0.5"
human_bytes = "0.4.3"
rkyv.workspace = true
auto_impl.workspace = true

reth-tasks = { workspace = true }

[dev-dependencies]
serial_test.workspace = true
test-fuzz = "4"
async-trait.workspace = true
reth-tasks.workspace = true
brontes-core = { workspace = true, features = ["tests"] }
brontes-classifier = { workspace = true, features = ["tests"] }
brontes-database = { workspace = true, features = ["tests"] }
brontes-types = { workspace = true }
brontes-pricing = { workspace = true, features = ["tests"] }
brontes-macros.workspace = true
criterion = "0.5.1"


[[bench]]
name = "cex_downloader_benchmarks"
harness = false
required-features = ["sorella-server"]

[[bench]]
name = "cex_quotes_conversion"
harness = false
required-features = ["sorella-server"]

[[test]]
name = "quotes_converter"
path = "tests/quotes_converter.rs"
required-features = ["sorella-server"]

[[test]]
name = "db_query"
path = "tests/db_query.rs"
required-features = ["sorella-server"]


[build-dependencies]
serde.workspace = true
toml = "0.8.9"
brontes-types.workspace = true
alloy-primitives.workspace = true

[features]
sorella-server = ["local-reth", "local-clickhouse"]
tests = ["brontes-pricing/tests"]
local-reth = [
  "brontes-core/local-reth",
  "reth-tracing-ext/local-reth",
  "brontes-types/local-reth",
]

local-clickhouse = [
  "db-interfaces",
  "brontes-core/local-clickhouse",
  "brontes-database/local-clickhouse",
  "async-rate-limiter",
]

arbitrum = [
  "brontes-types/arbitrum"
]