[package]
name = "brontes-libmdbx"
license = "Apache-2.0"
description = "Idiomatic and safe MDBX wrapper with good licence"
edition = "2021"

[lib]
name = "brontes_libmdbx"

[dependencies]
bitflags.workspace = true
byteorder = "1"
derive_more.workspace = true
indexmap = "2"
libc = "0.2"
parking_lot.workspace = true
thiserror.workspace = true
dashmap = { version = "5.5.3", features = ["inline"], optional = true }
tracing.workspace = true

reth-mdbx-sys.workspace = true

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
pprof = "0.13"

[target.'cfg(not(windows))'.dependencies]
libffi = "3.2.0"

[features]
default = []
return-borrowed = []
read-tx-timeouts = ["dashmap", "dashmap/inline"]
