[package]
name = "brontes-database-libmdbx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# brontes
brontes-database.workspace = true


# alloy
alloy-primitives = { workspace = true, features = ["rand", "rlp", "arbitrary", "serde"] }
alloy-rlp = { workspace = true, features = ["arrayvec"] }
alloy-json-abi = { workspace = true, features = ["serde_json"] }


# reth
reth-primitives.workspace = true
reth-interfaces.workspace = true
reth-libmdbx.workspace = true
reth-db.workspace = true

# libmdbx deps
parity-scale-codec = { version = "3.2.1", features = ["derive", "bytes"] }
reth-codecs = { workspace = true, features = ["arbitrary"] }
codecs-derive.workspace = true
proptest = "1.4"
proptest-derive = "0.4"
arbitrary = "1.3"
rand = "0.8.5"
modular-bitfield = "0.11.2"
bytes = "1.5"



# sorella-db
sorella-db-databases.workspace = true

# serde
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with = { workspace = true, features = ["macros"] }

# error handling
thiserror.workspace = true


# async
futures.workspace = true
tokio.workspace = true


# misc
eyre.workspace = true
paste = "1.0.14"
parking_lot.workspace = true



[dev-dependencies]
serial_test.workspace = true
test-fuzz = "4"

