[package]
name = "brontes-database-libmdbx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "compression"
harness = false


[dependencies]

# brontes
brontes-database.workspace = true
brontes-types.workspace = true
brontes-pricing.workspace = true
reth-tracing-ext.workspace = true

tracing.workspace = true

# alloy
alloy-primitives = { workspace = true, features = [
  "rand",
  "rlp",
  "arbitrary",
  "serde",
] }
alloy-rlp = { workspace = true, features = ["arrayvec"] }
alloy-json-abi = { workspace = true, features = ["serde_json"] }


# reth
reth-primitives.workspace = true
reth-interfaces.workspace = true
reth-libmdbx.workspace = true
reth-db.workspace = true
reth-rpc.workspace = true

# libmdbx deps
parity-scale-codec = { version = "3.2.1", features = ["derive", "bytes"] }
reth-codecs.workspace = true
codecs-derive.workspace = true
proptest = "1.4"
proptest-derive = "0.4"
arbitrary = "1.3"
rand = "0.8.5"
modular-bitfield = "0.11.2"
bytes = "1.5"
zstd = "0.13"


# numbers
malachite = { workspace = true, features = ["naturals_and_integers"] }

# sorella-db
sorella-db-databases.workspace = true

# serde
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_repr.workspace = true
serde_with = { workspace = true, features = ["macros"] }

# error handling
thiserror.workspace = true


# async
futures.workspace = true
tokio.workspace = true
tokio-scoped = "0.2.0"


# misc
eyre.workspace = true
paste = "1.0.14"
parking_lot.workspace = true
dotenv.workspace = true

# benches
criterion = "0.5"
parquet = "50"


[dev-dependencies]
serial_test.workspace = true
test-fuzz = "4"
